tests/NormalTests/paczka1/small_fuzzy/36805959.err
Error in line 1: 0dY A263 76,9
Error in line 9: nhjjjGh32MC S156 57,8
Error in line 11: nhjjjGh32MC A263 76,3
